feat: add get multi-partitions api
